--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@
       <!-- Botones ocultos que aparecen después -->
       <div id="botones" class="text-center mt-3" style="display: none;">
         <button class="btn btn-success w-100 mb-3 animate__animated animate__fadeInUp"
-          onclick="responder('Prometo nunca fallarte y una lealtad enorme, así como un amor incondicional dispuesto a mejorar por ti.', 'https://media.tenor.com/fJ76eNKqvFMAAAAM/pink-heart.gif')">
+          onclick="responder('Prometo nunca fallarte y una lealtad enorme, así como un amor incondicional dispuesto a mejorar por ti.', 'https://media.giphy.com/media/v1.Y2lkPWVjZjA1ZTQ3Zzk5YWJmNmM5aW83bWgwdHN3eDJ6dDB3anJmemw4MTVleTZyNTZ6aSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/1S9kD6xm4601O/giphy.gif')">
           La respuesta es SIII
         </button>
+
 
         <button class="btn btn-danger w-100 animate__animated animate__fadeInUp"
           onclick="responder('Bueno, entonces mándame un video haciendo un mortal triple para confirmar el NO.', 'https://media.tenor.com/F5qpZHSg_NwAAAAM/колобокicq.gif')">
