--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 
         <button class="btn btn-danger w-100 animate__animated animate__fadeInUp"
-          onclick="responder('Bueno, entonces mándame un video haciendo un mortal triple para confirmar el NO.', 'https://media.tenor.com/F5qpZHSg_NwAAAAM/колобокicq.gif')">
+          onclick="responder('Bueno, entonces mándame un video haciendo un mortal triple para confirmar el NO.', 'https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExcDd4em9jdjVtcHNhYzBwamIzejA2NTBsbWk0N3h1Z2d1dXR4M3ViZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/qQdL532ZANbjy/giphy.gif')">
           La respuesta es NOOO
         </button>
       </div>
