--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <!-- Botones ocultos que aparecen después -->
       <div id="botones" class="text-center mt-3" style="display: none;">
         <button class="btn btn-success w-100 mb-3 animate__animated animate__fadeInUp"
-          onclick="responder('Prometo nunca fallarte y una lealtad enorme, así como un amor incondicional dispuesto a mejorar por ti.', 'https://media.giphy.com/media/v1.Y2lkPWVjZjA1ZTQ3Zzk5YWJmNmM5aW83bWgwdHN3eDJ6dDB3anJmemw4MTVleTZyNTZ6aSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/1S9kD6xm4601O/giphy.gif')">
+          onclick="responder('Prometo nunca fallarte y una lealtad enorme, así como un amor incondicional dispuesto a mejorar por ti.', 'https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExMXhvczRsbHR0ZzhneTU3NW9vZjhoNjcwZXRqbGxlZG14YmNrbXB6eSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Lv2VhwHrt6ljhvZ6LF/giphy.gif')">
           La respuesta es SIII
         </button>
 
