--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
     }
 
     const textos = [
-      "Cada momento que paso contigo, cada conversación, cada risa compartida, cada gesto tuyo, me hace sentir algo que no puedo explicar del todo con palabras, pero que sé con certeza: me estoy enamorando de ti cada vez más. No es solo tu forma de ser, tu sonrisa, o tu manera de ver el mundo... es todo tú. Conocerte ha sido una de las cosas más bonitas que me ha pasado.",
-      "Me inspiras. Me motivas. Me haces querer ser una mejor versión de mí mismo. Cuando estoy contigo siento que todo es posible, que hay más color en la vida, que tengo una razón más para luchar por mis sueños. Y esa razón eres tú.",
-      "No se trata solo de lo que siento por ti, sino de lo que quiero construir contigo. Quiero acompañarte en tus días buenos y también en los no tan buenos. Quiero verte feliz, apoyarte, cuidarte y darte lo mejor de mí, no porque me sienta obligado, sino porque nace de mí hacerlo.",
-      "Por todo esto, y con todo mi corazón, quiero preguntarte: ¿Te gustaría que esto escalara a algo más y fuéramos novios?"
+      "Feliz cumpleaños, mi niña. Hoy no solo celebro el día en que llegaste al mundo, sino también el hecho de que, de alguna manera, coincidimos en este camino. Desde que te conocí, cada momento contigo, cada conversación, risa, han sido como descubrir un nuevo rincón bonito de la vida. Siento que contigo estoy viviendo lo que siempre quise: una conexión real, profunda, de esas que no se dan con cualquiera. No es solo lo que haces o dices, es quién eres. Eres la persona con la que siento que puedo ser yo mismo sin miedo, y eso para mí lo es todo.",
+      "Estar contigo me ha hecho ver el mundo distinto. Me inspiras a ser mejor, a dar más, a crecer. Pero no solo quiero crecer yo... quiero que crezcamos juntos. Quiero acompañarte mientras te conviertes en todo lo que sueñas ser, apoyarte en cada paso, en cada reto. Quiero ser ese compañero que te impulse, que te escuche, que te abrace fuerte cuando lo necesites. Porque te admiro, porque creo en ti, y porque deseo que nuestra historia esté llena de aprendizajes, logros compartidos y amor sincero.",
+      "No se trata solo de lo que siento por ti, sino de lo que tú provocas en mí. Contigo, todo cobra más sentido. Eres mi razón para sonreír más, para esforzarme, para levantarme incluso en los días difíciles. Me haces sentir vivo, motivado, enfocado. En tan poco tiempo te has vuelto una parte importante de mi vida. Y no exagero cuando te digo que eres una de las bendiciones más lindas que la vida me ha dado.",
+      "Por eso, y con todo mi corazón, hoy que es tu día, quiero regalarte más que palabras. Quiero darte una propuesta que nace de lo más honesto que hay en mí: ¿Te gustaría que esto que tenemos se transforme en algo aún más especial… y que seamos novios? Me encantaría seguir construyendo algo real contigo, paso a paso, de la mano, como dos personas que se eligen y se cuidan mutuamente cada día."
     ];
 
     function escribirTexto(elementId, texto, delay) {
@@ -167,9 +167,9 @@
     }
 
     escribirTexto("parrafo1", textos[0], 0);
-    escribirTexto("parrafo2", textos[1], 15100);
-    escribirTexto("parrafo3", textos[2], 24100);
-    escribirTexto("parrafo4", textos[3], 35000);
+    escribirTexto("parrafo2", textos[1], 13340);
+    escribirTexto("parrafo3", textos[2], 28120);
+    escribirTexto("parrafo4", textos[3], 42300);
 
     // 🌸 Pétalos flotantes corregidos
     const cantidadPetalos = 20;
@@ -186,7 +186,8 @@
     setTimeout(() => {
       const botones = document.getElementById("botones");
       botones.style.display = "block";
-    }, 38700);
+    }, 42400);
   </script>
 </body>
 </html>
+
