--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <!-- Animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
   <style>
     body {
       background: url("sakura.jpg") no-repeat center center fixed;
@@ -65,19 +68,55 @@
     .modal-content.animate__animated {
       animation-duration: 1s;
     }
+
+    /* 🎵 Botón de música personalizado */
+    .boton-musica {
+      background-color: #ff69b4;
+      color: white;
+      border: none;
+      padding: 12px 20px;
+      font-size: 1.1em;
+      border-radius: 30px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+      transition: transform 0.3s ease, background-color 0.3s ease;
+      display: inline-flex;
+      align-items: center;
+      gap: 10px;
+      cursor: pointer;
+    }
+
+    .boton-musica:hover {
+      background-color: #ff85c1;
+      transform: scale(1.05);
+    }
+
+    .boton-musica i {
+      font-size: 1.4em;
+      animation: pulse 2s infinite;
+    }
+
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); opacity: 1; }
+      50% { transform: scale(1.2); opacity: 0.7; }
+    }
+
+    #musica {
+      display: none;
+    }
   </style>
 </head>
 <body onclick="playMusic()">
 
-  <!-- Música con controles -->
+  <!-- 🎶 Botón de música personalizado -->
   <div class="container mt-3">
-    <label class="form-label text-light">Música que me recuerda a ti:</label>
-    <audio id="musica" controls class="w-100 rounded border">
+    <button class="boton-musica" onclick="playMusic()">
+      <i class="bi bi-music-note-beamed"></i> Reproducir música
+    </button>
+    <audio id="musica">
       <source src="musica.mp3" type="audio/mpeg" />
     </audio>
   </div>
 
-  <!-- Carta principal -->
   <div class="container mt-4 fade-in">
     <div class="card shadow-lg p-4 rounded" style="background-color: rgba(255, 255, 255, 0.9)">
       <h1 class="text-danger mb-3 animate__animated animate__heartBeat">
@@ -91,13 +130,11 @@
         <div id="parrafo4" class="fw-bold text-danger"></div>
       </div>
 
-      <!-- Botones ocultos que aparecen después -->
       <div id="botones" class="text-center mt-3" style="display: none;">
         <button class="btn btn-success w-100 mb-3 animate__animated animate__fadeInUp"
           onclick="responder('Prometo nunca fallarte y una lealtad enorme, así como un amor incondicional dispuesto a mejorar por ti.', 'https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExMXhvczRsbHR0ZzhneTU3NW9vZjhoNjcwZXRqbGxlZG14YmNrbXB6eSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Lv2VhwHrt6ljhvZ6LF/giphy.gif')">
           La respuesta es SIII
         </button>
-
 
         <button class="btn btn-danger w-100 animate__animated animate__fadeInUp"
           onclick="responder('Bueno, entonces mándame un video haciendo un mortal triple para confirmar el NO.', 'https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExcDd4em9jdjVtcHNhYzBwamIzejA2NTBsbWk0N3h1Z2d1dXR4M3ViZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/qQdL532ZANbjy/giphy.gif')">
@@ -107,7 +144,6 @@
     </div>
   </div>
 
-  <!-- Modal interactivo -->
   <div class="modal fade animate__animated animate__fadeInDown" id="respuestaModal" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content animate__animated animate__fadeInUp">
@@ -126,7 +162,6 @@
     </div>
   </div>
 
-  <!-- Scripts -->
   <script>
     function playMusic() {
       const music = document.getElementById("musica");
@@ -146,6 +181,7 @@
       let modal = new bootstrap.Modal(document.getElementById("respuestaModal"));
       modal.show();
     }
+
 
     const textos = [
       "Feliz cumpleaños, mi niña. Hoy no solo celebro el día en que llegaste al mundo, sino también el hecho de que, de alguna manera, coincidimos en este camino. Desde que te conocí, cada momento contigo, cada conversación, risa, han sido como descubrir un nuevo rincón bonito de la vida. Siento que contigo estoy viviendo lo que siempre quise: una conexión real, profunda, de esas que no se dan con cualquiera. No es solo lo que haces o dices, es quién eres. Eres la persona con la que siento que puedo ser yo mismo sin miedo, y eso para mí lo es todo.",
@@ -190,6 +226,7 @@
   </script>
 </body>
 </html>
+
 
 
 
