--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <!-- 🎶 Botón de música personalizado -->
   <div class="container mt-3">
     <button class="boton-musica" onclick="playMusic()">
-      <i class="bi bi-music-note-beamed"></i> Reproducir música
+      <i class="bi bi-music-note-beamed"></i> Dale play amorcito
     </button>
     <audio id="musica">
       <source src="musica.mp3" type="audio/mpeg" />
@@ -226,6 +226,7 @@
   </script>
 </body>
 </html>
+
 
 
 
