--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
       <div id="botones" class="text-center mt-3" style="display: none;">
         <button class="btn btn-success w-100 mb-3 animate__animated animate__fadeInUp"
-          onclick="responder('Prometo nunca fallarte y una lealtad enorme, así como un amor incondicional dispuesto a mejorar por ti.', 'https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExMXhvczRsbHR0ZzhneTU3NW9vZjhoNjcwZXRqbGxlZG14YmNrbXB6eSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Lv2VhwHrt6ljhvZ6LF/giphy.gif')">
+          onclick="responder('Gracias por confiar en lo que estamos construyendo, por dar este paso conmigo, y por dejarme formar parte de tu vida de esta manera tan especial. Prometo cuidarte, escucharte, respetarte y acompañarte en todo lo que venga. TE AMO', 'https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExMXhvczRsbHR0ZzhneTU3NW9vZjhoNjcwZXRqbGxlZG14YmNrbXB6eSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Lv2VhwHrt6ljhvZ6LF/giphy.gif')">
           La respuesta es SIII
         </button>
 
@@ -226,6 +226,7 @@
   </script>
 </body>
 </html>
+
 
 
 
